[gd_scene format=3 uid="uid://kk0fhnjjanvm"]

[ext_resource type="Script" uid="uid://dg7hy3jalwraf" path="res://Scripts/Player/Player.gd" id="1_4flbx"]
[ext_resource type="Texture2D" uid="uid://c7pofyyvwv5s3" path="res://art/gun_sprites.png" id="2_onrkg"]
[ext_resource type="Texture2D" uid="uid://b54coabu2g0x8" path="res://art/UI/tile_0135.png" id="3_hqtel"]
[ext_resource type="Texture2D" uid="uid://cynknu73exjbv" path="res://art/UI/tile_0201.png" id="3_i3pqv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wydro"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i3pqv"]
atlas = ExtResource("2_onrkg")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_onrkg"]
atlas = ExtResource("2_onrkg")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("2_onrkg")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("2_onrkg")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("2_onrkg")
region = Rect2(0, 0, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_hqtel"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3pqv")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onrkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}],
"loop": false,
"name": &"shoot",
"speed": 8.0
}]

[node name="Player" type="CharacterBody3D" unique_id=2124719694]
script = ExtResource("1_4flbx")
basicCrosshair = ExtResource("3_i3pqv")
interactCrosshair = ExtResource("3_hqtel")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=74756443]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_wydro")

[node name="Head" type="Node3D" parent="." unique_id=1061304472]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.67939, 0)

[node name="Camera3D" type="Camera3D" parent="Head" unique_id=1161783948]

[node name="InteractRayCast" type="RayCast3D" parent="Head/Camera3D" unique_id=256204431]
target_position = Vector3(0, 0, -1.1)
debug_shape_custom_color = Color(0.629061, 0.7433998, 0.96105665, 1)
debug_shape_thickness = 3

[node name="GunRayCast" type="RayCast3D" parent="Head/Camera3D" unique_id=1669860427]
target_position = Vector3(0, 0, -15)
debug_shape_custom_color = Color(0.629061, 0.7433998, 0.96105665, 1)
debug_shape_thickness = 3

[node name="GunSprite" type="AnimatedSprite3D" parent="Head/Camera3D" unique_id=102393395]
transform = Transform3D(0.13, 0, 0, 0, 0.13, 0, 0, 0, 0.13, 0.325, -0.135, -0.5)
layers = 2
sprite_frames = SubResource("SpriteFrames_hqtel")
animation = &"shoot"
autoplay = "idle"

[node name="Crosshair" type="TextureRect" parent="." unique_id=1024759470]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_i3pqv")
